# python-steam-tradeoffer-manager

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: index.md
docs/getting_started/: installation.md
docs/reference/: manager_bot.md
docs/stylesheets/: extra.css
docs/theme/: main.html
getting_started/installation/: index.html
reference/manager_bot/: index.html
search/: search_index.json
steam_tradeoffer_manager/: __init__.py  _monkey_patch.py  bot.py  inventory.py  item.py  items.py  manager.py  mixins.py  offer.py  storage.py  trades.py  utils.py
steam_tradeoffer_manager/base/: __init__.py  abc.py  bot.py  enums.py  exceptions.py  mixins.py  pool.py
stylesheets/: extra.css
tests/: conftest.py  const_data.py  data.py  mocks.py  test_bot_exceptions.py  test_constraints_mixin.py  test_manager.py  test_manager_bot.py  test_offers.py  test_pool_mixin.py
theme/: main.html
